--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,24 @@
+
+# https://assemble.io/docs/YAML-front-matter.html
+
 theme: jekyll-theme-cayman
+
+
+#theme: jekyll-theme-minimal
+
+title: Comentário do COVID-19
+description: Este site agrupa os meus comentários sobre o COVID-19 que publico no Facebook.
+
+# source: https://github.com/mmistakes/minimal-mistakes/blob/master/_config.yml
+
+# Markdown Processing
+kramdown:
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+  
